Fixes bagde alignment

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -60,7 +60,7 @@ span.badge.new {
 span.badge {
   min-width: 3rem;
   padding: 0 9px;
-  margin-left: 14px;
+  margin-right: 14px;
   text-align: center;
   font-size: 1rem;
   line-height: 25px;
